--- a/demo/statics/css/base.css
+++ b/demo/statics/css/base.css
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5,h6 {
 	font-size: 100%;
 	font-weight: normal
 }
-a{text-decoration:none;}
+a,a:hover{text-decoration:none;}
 q:before, q:after { content: '' }
 abbr, acronym { border: 0; font-variant: normal }
 sup { vertical-align: text-top }
