--- a/demo/statics/css/customer.scss
+++ b/demo/statics/css/customer.scss
@@ -1213,192 +1213,392 @@
 
 }
 /**信息管理**/
-	.infoManager-content{
-		.wrap-process{
-			padding-top:5px;
-			position:relative;
-			margin:0 55px;
-			height:100px;
-			.process-line{
-				position:absolute;
-				width:520px;
+.infoManager-content{
+	.wrap-process{
+		padding-top:5px;
+		position:relative;
+		margin:0 55px;
+		height:100px;
+		.process-line{
+			position:absolute;
+			width:520px;
+			height:3px;
+			top:27px;
+			left:25px;
+			z-index:0;
+			background-color:#e5e5e5;
+			.finished-process{
 				height:3px;
-				top:27px;
-				left:25px;
-				z-index:0;
-				background-color:#e5e5e5;
-				.finished-process{
-					height:3px;
-					background-color:#24af26;
-				}
+				background-color:#24af26;
 			}
-			.process-part{
-				float:left;
-				text-align:center;
-				color:#a9a9a9;
-				font-size:12px;
-				.wrap-round{
-					position:relative;
-					display:inline-block;
-					width:56px;
-					height:55px;
-					background-color:#fff;
-				}
-				.part-round{
-					display:inline-block;
-					width:45px;
-					height:45px;
-					text-align:center;
-					line-height:45px;
-					background:url(../../statics/image/icons/icon-round45.png) no-repeat center center;
-				}
-			}
-			.common-part{
-				margin-left:178px;
-			}
-			.process-active-part{
-				.part-round{
-					background:url(../../statics/image/icons/icon-round45-active.png) no-repeat center center;
-				}
-				p{
-					color:#333;
-				}
-			}
-		}	
-	}
-	.infoManager-edit{
-		padding-right:15px;
-		padding-left:15px;
-		.infoManager-title{
-			line-height:1;
 		}
-		.wrap-user-pic{
-			padding:30px 0 25px 0;
+		.process-part{
+			float:left;
 			text-align:center;
-			border-bottom:1px solid #e5e5e5;
-			.user-pic{
-				display:inline-block;
-				margin-bottom:12px;
-				width:123px;
-				height:123px;
-				line-height:120px;
-				overflow:hidden;
-			}
-			img{
-				vertical-align: middle;
-			}
-			.wrap-upload{
+			color:#a9a9a9;
+			font-size:12px;
+			.wrap-round{
 				position:relative;
 				display:inline-block;
-				width:120px;
-				height:28px;
-				font-size:12px;
-				color:#16b115;
-				line-height:28px;
-				cursor:pointer;
-				border:1px solid #16b115;
-        @include borderRadius;
-				.upload-btn{
-          position:absolute;
-          left:0;
-          top:0;
-          width:100%;
-          height:100%;
-          opacity:0;
-          filter:alpha(opacity=0);
-
-				}
-		  }
+				width:56px;
+				height:55px;
+				background-color:#fff;
+			}
+			.part-round{
+				display:inline-block;
+				width:45px;
+				height:45px;
+				text-align:center;
+				line-height:45px;
+				background:url(../../statics/image/icons/icon-round45.png) no-repeat center center;
+			}
 		}
-		.wrap-user-edit{
-			padding:30px 50px 38px 45px;
-			.edit-item{
-				margin-bottom:20px;
-				.item-left{
-					display:inline-block;
-					margin-bottom:0;
-					margin-right:2px;
-					width:85px;
-					text-align:right;
-					.mark{
-						color:#ff0000;
-					}
-				}
-				.item-right{
-					position:relative;
-					display:inline-block;
-					width:136px;
-					height:28px;
-					border:1px solid #e5e5e5;
-					input{
-						padding-right:12px;
-						margin:0;
-						height:100%;
-						width:100%;
-						border:none;
-						font-size:12px;
-						outline:none;
-						background-color:#fff;
-						@include boxSizing;
-					}
-					.dropdown{
-						position: absolute;
-				    right: 2px;
-				    top: 10px;
-				    display: inline-block;
-				    width: 15px;
-				    height: 6px;
-				    background: url(../../statics/image/icons/icon-dropdown9.png) no-repeat center center;
-				    background-size: 9px 5px;
-					}
-				}
-				.item-details{
-					display:inline-block;
-					font-size:12px;
-					color:#a9a9a9;
+		.common-part{
+			margin-left:178px;
+		}
+		.process-active-part{
+			.part-round{
+				background:url(../../statics/image/icons/icon-round45-active.png) no-repeat center center;
+			}
+			p{
+				color:#333;
+			}
+		}
+	}	
+}
+.infoManager-edit{
+	padding-right:15px;
+	padding-left:15px;
+	.infoManager-title{
+		line-height:1;
+	}
+	.wrap-user-pic{
+		padding:30px 0 25px 0;
+		text-align:center;
+		border-bottom:1px solid #e5e5e5;
+		.user-pic{
+			display:inline-block;
+			margin-bottom:12px;
+			width:123px;
+			height:123px;
+			line-height:120px;
+			overflow:hidden;
+		}
+		img{
+			vertical-align: middle;
+		}
+		.wrap-upload{
+			position:relative;
+			display:inline-block;
+			width:120px;
+			height:28px;
+			font-size:12px;
+			color:#16b115;
+			line-height:28px;
+			cursor:pointer;
+			border:1px solid #16b115;
+      @include borderRadius;
+			.upload-btn{
+        position:absolute;
+        left:0;
+        top:0;
+        width:100%;
+        height:100%;
+        opacity:0;
+        filter:alpha(opacity=0);
+
+			}
+	  }
+	}
+	.wrap-user-edit{
+		padding:30px 50px 38px 45px;
+		.edit-item{
+			margin-bottom:20px;
+			.item-left{
+				display:inline-block;
+				margin-bottom:0;
+				margin-right:2px;
+				width:85px;
+				text-align:right;
+				.mark{
+					color:#ff0000;
 				}
 			}
-			.sex-item{
-				.sex-right{
+			.item-right{
+				position:relative;
+				display:inline-block;
+				width:136px;
+				height:28px;
+				border:1px solid #e5e5e5;
+				input{
+					padding-right:12px;
+					margin:0;
+					height:100%;
+					width:100%;
+					border:none;
+					font-size:12px;
+					outline:none;
+					color:#333;
+					background-color:#fff;
+					@include boxSizing;
+				}
+				.dropdown{
+					position: absolute;
+			    right: 2px;
+			    top: 10px;
+			    display: inline-block;
+			    width: 15px;
+			    height: 6px;
+			    background: url(../../statics/image/icons/icon-dropdown9.png) no-repeat center center;
+			    background-size: 9px 5px;
+				}
+			}
+			.item-details{
+				display:inline-block;
+				font-size:12px;
+				color:#a9a9a9;
+			}
+		}
+		.sex-item{
+			.sex-right{
+				display:inline-block;
+				span{
+					position:relative;
+					padding-left:20px;
 					display:inline-block;
-					span{
-						position:relative;
-						padding-left:20px;
-						display:inline-block;
-						margin-right:30px;
-            width:14px;
-            height:20px;
-            vertical-align:middle;
-            background:url(../../statics/image/icons/icon-checkbox-noSelect.png) no-repeat left 2px;
-					}
-					.select-input{
-						background:url(../../statics/image/icons/icon-checkbox-select.png) no-repeat left 2px;
-					}
+					margin-right:30px;
+          width:14px;
+          height:20px;
+          vertical-align:middle;
+          background:url(../../statics/image/icons/icon-checkbox-noSelect.png) no-repeat left 2px;
+				}
+				.select-input{
+					background:url(../../statics/image/icons/icon-checkbox-select.png) no-repeat left 2px;
+				}
+				input{
+					position:absolute;
+					left:0;
+					top:2px;
+					width:14px;
+					height:14px;
+					margin:0;
+					opacity:0;
+					filter:alpha(opacity=0);
+				}
+			}
+		}
+	}
+	.save-edit{
+		padding-bottom:30px;
+		text-align:center;
+		a{
+			display:inline-block;
+			width:120px;
+			height:38px;
+			text-align:center;
+			line-height:38px;
+			color:#fff;
+			background-color:#24b026;
+			@include borderRadius;
+		}
+	}
+}
+.infoManager-bingding{
+	height:700px;
+	padding-left:20px;
+	padding-right:20px;
+	.bingding-title{
+		padding-bottom:18px;
+		line-height:1;
+	}
+	.bingding-item{
+		.item-title{
+			padding:12px 0 12px 20px;
+			border-bottom:1px solid #e5e5e5;
+			cursor:pointer;
+			background:url(../../statics/image/icons/icon-turn-up.png) no-repeat left center;
+			.modify{
+				float:right;
+				padding-left:20px;
+				color:#199ae2;
+				font-size:12px;
+				background:url(../../statics/image/icons/icon-modify.png) no-repeat left 4px;
+			}
+			.bingding-tip{
+				display:inline-block;
+				margin-left:10px;
+				padding:1px 7px;
+				font-size:12px;
+				color:#fff;
+				background-color:#24b026;
+        @include borderRadius;
+			}
+		}
+		.item-content{
+			display:none;
+			padding-top:30px;
+			text-align:center;
+			border-bottom:10px solid #eee;
+			.content-left{
+				display:inline-block;
+				margin-bottom:0;
+			}
+			.wrap-item{
+				padding-bottom:20px;
+			}
+			.content-right{
+				display:inline-block;
+				height:28px;
+				width:158px;
+				border:1px solid #e5e5e5;
+				input{
+					padding:0 10px;
+					width:158px;
+					margin-bottom:0;
+					height:100%;
+					border:none;
+					box-shadow: none;
+					@include boxSizing;
+				}
+			}
+			.tip{
+				padding:20px 0 20px;
+				font-size:12px;
+				color:#ff0000;
+			}
+			.save-bingding{
+      	display:inline-block;
+      	margin:20px 0 40px;
+      	width:120px;
+      	height:36px;
+      	line-height:36px;
+      	background-color:#24b026;
+        color:#fff;
+        @include borderRadius;
+			}
+		}
+
+	}
+	.active-item{
+			.item-title{
+         color:#16b115;
+         background:url(../../statics/image/icons/icon-turndown.png) no-repeat left center;
+			}
+			.item-content{
+				display:block;
+			}
+		}
+}
+.infoManager-realName{
+	padding-left:20px;
+	padding-right:20px;
+	.realName-title{
+     line-height:1;
+     padding-bottom:40px;
+	}
+	.realName-item{
+		padding:0 40px 20px;
+	}
+	.realName-left{
+		display:inline-block;
+		margin:0;
+		width:85px;
+		text-align:right;
+		.mark{
+			color:#ff0000;
+		}
+	}
+	.realName-right{
+		display:inline-block;
+		width:255px;
+		height:28px;
+		border:1px solid #e5e5e5;
+		input{
+			outline:none;
+			height:100%;
+			width:100%;
+			box-shadow:none;
+			font-size:12px;
+			border:none;
+			margin:0;
+			color:#333;
+			background-color:#fff;
+			@include boxSizing;
+		}
+	}
+	.date-right{
+		position:relative;
+		width:136px;
+		.time-dropdown{
+			position: absolute;
+	    right: 2px;
+	    top: 10px;
+	    display: inline-block;
+	    width: 15px;
+	    height: 6px;
+	    background: url(../../statics/image/icons/icon-dropdown9.png) no-repeat center center;
+	    background-size: 9px 5px;
+		}
+	}
+	.pic-item{
+		.realName-left{
+			vertical-align:top;
+		}
+		.realName-pic{
+			display:inline-block;
+			.pic-item{
+				display:inline-block;
+				margin-right:10px;
+				width:227px;
+				overflow:hidden;
+				img{
+					width:227px;
+					height:143px;
+				}
+			}
+			.wrap-input{
+				margin-top:10px;
+				text-align:center;
+				.up-btn{
+					position:relative;
+					display:inline-block;
+					width:120px;
+					height:28px;
+					line-height:28px;
+					color:#24b026;
+					border:1px solid #24b026;
+					@include borderRadius;
 					input{
 						position:absolute;
 						left:0;
-						top:2px;
-						width:14px;
-						height:14px;
-						margin:0;
-						opacity:0;
-						filter:alpha(opacity=0);
+						top:0;
+						width:100%;
+						height:100%;
+            opacity:0;
+            filter:alpha(opacity=0);
 					}
 				}
 			}
-		}
-		.save-edit{
-			padding-bottom:30px;
-			text-align:center;
-			a{
-				display:inline-block;
-				width:120px;
-				height:38px;
-				text-align:center;
-				line-height:38px;
-				color:#fff;
-				background-color:#24b026;
-				@include borderRadius;
+			.pic-tip{
+				margin-top:20px;
+				font-size:12px;
+				color:#ff0000;
 			}
 		}
 	}
+	.realName-save{
+		padding-top:50px;
+		padding-bottom:179px;
+		text-align:center;
+		a{
+			display:inline-block;
+			width:120px;
+			height:38px;
+			text-align:center;
+			line-height:38px;
+			color:#fff;
+			background-color:#24b026;
+			@include borderRadius
+		}
+	}
+}
