--- a/demo/statics/css/newStyle.scss
+++ b/demo/statics/css/newStyle.scss
@@ -18,12 +18,9 @@ body{
 	top:0;
 	left:0;
 	right:0;z-index:99;
-	border-bottom:1px solid #dedede;
 	background-color:#fff;
-	-webkit-box-shadow:0 2px 4px #dedede;
-	-moz-box-shadow:0 2px 4px #dedede;
-	box-shadow: 0 2px 4px #dedede;
-	
+	box-shadow: 0 2px 4px #eee;
+	border-bottom:1px solid #eee;
 }
 /*顶部信息**/
 .wrap-nav-top{
@@ -144,12 +141,11 @@ body{
 				vertical-align: -4px;
 			}
 			.icon-dropdown{
-          display:inline-block;
-          width:10px;
-          height:7px;
-          vertical-align:middle;
-          background:url(../image/icon-dropdown.png) center center;
-          background-size:9px 6px;
+                display:inline-block;
+                width:10px;
+                height:7px;
+                background:url(../image/icon-dropdown.png) center center;
+                background-size:9px 6px;
 			}
 			.address-list{
 				display:none;
@@ -160,7 +156,6 @@ body{
 				height:160px;
 				background-color:#fff;
 				border:1px solid #dddddd;
-				overflow:hidden;
 				.item{
 					float:left;
 					width:82px;
@@ -232,13 +227,9 @@ body{
 		font-size:16px;
 		background-color:#24b026;
 		text-align:center;
-		ul{
-			width:960px;
-			margin:0 auto;
-		}
 		.sub-nav-item{
 			display:inline-block;
-			padding:0 40px;
+			padding:0 50px;
 					a{
 						display:inline-block;
 						color:#fff;
@@ -719,7 +710,7 @@ body{
 		}
 		.item-details{
 			padding:0 10px;
-			line-height:1.4;
+			line-height:1;
 			font-size:12px;
 			color:#666;
 			p{
@@ -993,8 +984,8 @@ body{
 	}
 	.carbonTrade-list{
 		.wrap-sort{
-			height:32px;
 			padding:20px 0;
+			overflow:hidden;
 			.sort{
 				float:right;
 				height:30px;
@@ -1020,22 +1011,15 @@ body{
 				}
 			}
 			a{
-        position:relative;
 				float:left;
 				display:inline-block;
 				width:85px;
-
-        text-align:center;
-        line-height:30px;
-        color:#666;
-        b{
-        	font-weight:normal;
-        }
+                text-align:center;
+                line-height:30px;
+                color:#666;
 			}
 			.btnLeft{
-
 				border-right:1px solid #ddd;
-
 			}
 			.nowActive{
 				background-color:#24b026;
@@ -1045,21 +1029,8 @@ body{
 				}
 				
 			}
-			.dropdown-list{
-				display:none;
-				position:absolute;
-				width:100%;
-				left:-1px;
-				background-color:#fff;
-				border:1px solid #ddd;
-				dd{
-					border-bottom:1px solid #ddd;
-					font-size:12px;
-				}
-			}
 		}
 		.wrap-list{
-			clear:both;
 			overflow:hidden;
             .lists{
             	overflow:hidden;
@@ -1231,14 +1202,6 @@ body{
 .carbonTradeDetail-main{
 	padding-top:129px;
 	background-color:#f8f8f8;
-	padding-bottom:20px;
-	.width960{
-		padding:0 40px;
-		background-color:#fff;
-		-webkit-box-sizing:border-box;
-		-moz-box-sizing:border-box;
-		box-sizing:border-box;
-	}
 	.details-title{
 		text-align:center;
 		 h1{
@@ -1249,7 +1212,6 @@ body{
 		 .item-info{
 		 	padding:30px 0;
 		 	font-size:16px;
-		 	border-bottom:1px solid #ddd;
 		 	i{
 		 		margin-right:5px;
 		 	  display:inline-block;	
@@ -1328,7 +1290,7 @@ body{
 		}
 	} */
 	.details-article{
-		padding:15px 0 25px 0;
+		padding:0 0 45px 0;
 		img{
 			display:block;
 			max-width:100%!important;
@@ -1342,9 +1304,6 @@ body{
 }
 /**弹框**/
 .myModal-mask{
-
-}
-.wrap-myModal{
 	display:none;
 	position:fixed;
 	left:0;
@@ -1355,6 +1314,9 @@ body{
 	width:100%;
 	background:url(../image/icons/pic-dimmer1440.png);
 	background-size:100% 100%;
+}
+.wrap-myModal{
+	display:none;
 	.myModal{
 		position:absolute;
 		left:50%;
@@ -1431,7 +1393,7 @@ body{
 				}
 				.modalTextarea{
 					padding:5px;
-					width:500px;
+					width:510px;
 					height:100px;
 					overflow:hidden;
 					resize:none;
@@ -1482,7 +1444,6 @@ body{
 					.dropitem{
 						padding:5px;
 						border-bottom:1px solid #eee;
-						cursor:pointer;
 					}
 				}
 
@@ -1497,6 +1458,7 @@ body{
 			
 		}
 		.myModal-foot{
+			margin-top:20px;
 			padding:20px 0;
 			text-align:center;
 			background-color:#f8f8f8;
@@ -1649,7 +1611,6 @@ body{
 		 		font-size:16px;
 		 		a{
 		 			color:#333;
-		 			cursor:pointer;
 		 		}
 		 		.icon-mark{
 		 			display:inline-block;
@@ -1718,8 +1679,7 @@ body{
 		padding:0 38px;
 	}
 	.aboutUs-content{
-		 padding:140px 0 30px;
-		 margin-top:-110px;
+		 padding:30px 0;
 		 border-bottom:20px solid #eee;
 		 h5{
 		 	  padding-bottom:20px;
@@ -1893,405 +1853,6 @@ body{
 		}
 	}
 }
-/*注册登录模块**/
-.width1024{
-	margin:0 auto;
-	width:1024px;
-}
-.wrap-register{
-	padding:15px 0 30px 0;
-	overflow:hidden;
-	.register-left{
-		padding-right:110px;
-		float:left;
-		.title{
-			padding:75px 0 20px 8px;
-			color:#24af26;
-			font-size:36px;
-		}
-		.wrap-wc{
-			overflow:hidden;
-			.wc-item{
-				float:left;
-				margin-right:12px;
-				img{
-					width:160px;
-					height:160px;
-					vertical-align:middle;
-				}
-				label{
-					display:block;
-					padding:5px 0 0 8px;
-					font-size:16px;
-					color:#666;
-				}
-			}
-		}
-	}
-	.register-right{
-		padding-left:135px;
-		overflow:hidden;
-		border-left:1px solid #e5e5e5;
-
-		.input-item{
-			margin-bottom:30px;
-			width:418px;
-			height:46px;
-			line-height:46px;
-			font-size:16px;
-			border:1px solid #e5e5e5;
-			input{
-				padding:5px 10px;
-				border:none;
-				outline:none;
-				width:100%;
-				-webkit-box-sizing:border-box;
-				-moz-box-sizing:border-box;
-				box-sizing:border-box;
-			}
-		}
-		.address-item{
-			position:relative;
-			width:205px;
-			input{
-				padding-right:30px;
-			}
-			.icon-down{
-				position:absolute;
-				right:0px;
-				top:0px;
-				display:inline-block;
-				width:30px;
-				height:46px;
-				cursor:pointer;
-				background:url(../../statics/image/icons/icon-dropdown.png) no-repeat center center;
-			}
-		}
-		.tel-item{
-			overflow:hidden;
-			.tel-mark{
-         float:left;
-         display:inline-block;
-         padding:0 10px;
-         border-right:1px solid #e5e5e5;
-			}
-			.wrap-tel{
-				overflow:hidden;
-			}
-		}
-	  .pw-rank{
-	  	margin:-28px 0 12px 0;
-	  	span{
-	  		display:inline-block;
-	  		margin-right:3px;
-	  		width:40px;
-	  		height:18px;
-	  		font-size:12px;
-	  		line-height:18px;
-	  		text-align:center;
-	  		color:#fff;
-	  	}
-	  	.low{
-        background-color:#eb262c;
-	  	}
-	  	.middle{
-	  		background-color:#fd982c;
-	  	}
-	  	.height{
-	  		background-color:#0c9e0d;
-	  	}
-	  }
-	  .wrap-code{
-	  	overflow:hidden;
-	  	.input-item{
-	  		margin-right:25px;
-	  		float:left;
-	  		width:205px;
-	  	}
-	  	.obtain-btn{
-	  		float:left;
-	  		width:185px;
-	  		height:46px;
-	  		line-height:46px;
-	  		text-align:center;
-	  		font-size:16px;
-	  		border:1px solid #24af26;
-	  		color:#24af26;
-	  	}
-	  }
-	  .register-btn{
-	  	width:418px;
-	  	height:60px;
-	  	line-height:60px;
-	  	color:#fff;
-	  	text-align:center;
-	  	cursor:pointer;
-	  	font-size:24px;
-	  	background-color:#24af26;
-	  }
-	  .register-tip{
-	  	padding-top:15px;
-	  	font-size:16px;
-	  	.tip{
-	  		padding-right:15px;
-	  		color:#a9a9a9;
-	  	}
-	  	.login-now{
-	  		color:#199ae2;
-	  	}
-	  }
-	  .login-title{
-	  	padding:20px 0 40px 0;
-	  	color:#24af26;
-	  	font-size:22px;
-	  }
-	  .remeber-status{
-	  	margin:-5px 0 25px 0;
-	  	font-size:16px;
-	  	color:#a9a9a9;
-	  	.remeber-checkbox{
-	  		position:relative;
-	  		display:inline-block;
-	  		margin-right:5px;
-	  		width:24px;
-	  		height:24px;
-	  		background:url(../../statics/image/icons/icon-checkbox.png) no-repeat;
-	  		vertical-align:-7px;
-	  		input{
-	  			position:absolute;
-	  			left:0;
-	  			top:0;
-	  			width:24px;
-	  			height:24px;
-	  			outline:none;
-	  			opacity:0;
-	  			filter:alpha(opacity=0);
-	  		}
-	  	}
-	  	.remeber-checkbox-no{
-	  		background:url(../../statics/image/icons/icon-checkbox-no.png) no-repeat;
-	  	}
-	  }
-	  .login-tip{
-	  	text-align:right;
-	  	.login-now{
-	  		margin-right:15px;
-	  	}
-	  }
-	  .changeCode{
-	  	.pic{
-	  		width:123px;
-	  		height:48px;
-	  		vertical-align:-5px;
-	  	}
-	  	.change-btn{
-	  		margin-left:5px;
-	  		cursor:pointer;
-	  		color:#199ae2;
-	  		font-size:16px;
-	  	}
-	  }
-	}
-	.forgetPassword-title{
-		font-size:24px;
-	}
-	.wrap-process{
-		margin:0 auto;
-		width:720px;
-		height:120px;
-		margin-top:50px;
-		.process-line{
-			height:4px;
-			background-color:#e5e5e5;
-		}
-		.process-part{
-			position:relative;
-			float:left;
-			width:240px;
-			text-align:center;
-			.part-line{
-				height:4px;
-				background-color:#e5e5e5;
-			}
-			.process-number{
-				position:absolute;
-				top:-13px;
-				left:106px;
-				width:29px;
-				height:29px;
-				line-height:29px;
-				color:#fff;
-				font-size:20px;
-				background:url(../../statics/image/icons/icon-round29.png) no-repeat;
-			}
-			.part-tip{
-				display:inline-block;
-				margin-top:25px;
-				color:#a9a9a9;
-			}
-		}
-		.part-finished{
-			.process-number{
-				background:url(../../statics/image/icons/icon-round29-active.png) no-repeat;
-			}
-			.part-tip{
-				color:#24af26;
-			}
-			.part-line{
-				background-color:#24af26;
-			}
-		}
-	}
-	.forgetpw-item{
-		position:relative;
-		text-align:center;
-		.label{
-			display:inline-block;
-			margin-right:10px;
-			width:105px;
-			line-height:36px;
-			text-align:right;
-		}
-		.input-item{
-			display:inline-block;
-			margin-bottom:20px;
-			height:36px;
-			line-height:36px;
-			width:258px;
-			border:1px solid #e5e5e5;
-			input{
-				width:100%;
-				border:none;
-				outline:none;
-				padding:3px 10px;
-				-webkit-box-sizing:border-box;
-				-moz-box-sizing:border-box;
-				box-sizing:border-box;
-			}
-		}
-		.submit-request{
-			display:inline-block;
-			margin-top:10px;
-			width:120px;
-			height:38px;
-			line-height:38px;
-			font-size:16px;
-			color:#fff;
-			text-align:center;
-			background-color:#24b026;	
-		}
-		.password-tip{
-			margin-left:5px;
-			position:absolute;
-			top:10px;
-			font-size:12px;
-			color:#a9a9a9;
-		}
-	}
-	.code-item{
-		.input-item{
-			width:140px;
-		}
-		.send-code{
-			margin-left:4px;
-			display:inline-block;
-			height:36px;
-			width:108px;
-			line-height:36px;
-			text-align:center;
-			border:1px solid #24af26;
-			cursor:pointer;
-			color:#24af26;
-		}
-	}
-	.wrap-checking{
-		text-align:center;
-		.check-left{
-			width:75px;
-			height:75px;
-			display:inline-block;
-			margin-right:5px;
-			overflow:hidden;
-			img{
-				max-width:100%;
-			}
-		}
-		.check-right{
-			display:inline-block;
-			text-align:left;
-			vertical-align:20px;
-			.check-name{
-				padding-bottom:10px;
-         font-size:16px;
-			}
-			.check-tip{
-				font-size:12px;
-				color:#a9a9a9;
-			}
-		}
-	}
-	.reset-item{
-		.label{
-			vertical-align:30px;
-		}
-		.input-item{
-			margin-bottom:32px;
-		}
-		.pw-rank{
-			text-align:left;
-	  	margin-top:-5px;
-	  	span{
-	  		display:inline-block;
-	  		margin-right:3px;
-	  		width:40px;
-	  		height:18px;
-	  		font-size:12px;
-	  		line-height:18px;
-	  		text-align:center;
-	  		color:#fff;
-	  	}
-	  	.low{
-        background-color:#eb262c;
-	  	}
-	  	.middle{
-	  		background-color:#fd982c;
-	  	}
-	  	.height{
-	  		background-color:#0c9e0d;
-	  	}
-	  }
-	}
-	.finished-step{
-		text-align:center;
-		.finished-tip{
-			span{
-				display:inline-block;
-				padding:12px 0 12px 55px;
-				font-size:18px;
-				background:url(../../statics/image/icons/icon-success.png) no-repeat left center;
-			}
-		}
-		.back-login{
-			padding:20px 0 20px 0;
-			a{
-				display:inline-block;
-				width:118px;
-				height:32px;
-				line-height:32px;
-				background-color:#24af26;
-				color:#fff;
-			}
-		}
-		.back-tip{
-			font-size:12px;
-			color:#a9a9a9;
-			strong{
-				margin:0 3px;
-				color:#ff0000;
-			}
-		}
-	}
-}
 /***尾部**/
 .pageFooter{
 	background-color:#242424;
@@ -2302,7 +1863,7 @@ body{
 
 	}
 	.wrap-partner-list{
-		    padding:20px 0 15px;
+		    padding:20px 0;
 			overflow:hidden;
 			border-bottom:1px solid #000;
 			.partner-title{
@@ -2310,17 +1871,13 @@ body{
 		        color:#24b026;
 			}
 			.partner-list{
-				padding-bottom:5px;
 				overflow:hidden;
 				li{
 					float:left;
-					margin:0 10px;
+					padding:0 10px;
 				}
 				a{
 					color:#fff;
-					&:hover{
-						border-bottom:1px solid #e4e4e4;
-					}
 				}
 			}
 		}
@@ -2334,9 +1891,6 @@ body{
     			float:left;
     			a{
     				color:#24b026;
-    				&:hover{
-    					border-bottom:1px solid #24b026;
-    				}
     			}
     			h6{
     				padding-top:5px;
