--- a/demo/statics/css/customer.css
+++ b/demo/statics/css/customer.css
@@ -1248,8 +1248,9 @@
             color: #999;
             background-color: #f8f8f8; }
     .infoManager-bingding .bingding-item .item-content .tip {
-      padding: 20px 0 20px;
+      padding: 0px 0 10px;
       font-size: 12px;
+      font-weight: bold;
       color: #ff0000; }
     .infoManager-bingding .bingding-item .item-content .save-bingding {
       display: inline-block;
