--- a/demo/statics/css/customer.scss
+++ b/demo/statics/css/customer.scss
@@ -1575,8 +1575,9 @@
 				}
 			}
 			.tip{
-				padding:20px 0 20px;
+				padding:0px 0 10px;
 				font-size:12px;
+				font-weight:bold;
 				color:#ff0000;
 			}
 			.save-bingding{
